# team-forge

./: .env.example  .gitignore  CLAUDE.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  use_case_diagrams.excalidraw
.claude/skills/tdd/: SKILL.md
analytics/: pyproject.toml  requirements.txt
analytics/app/: main.py
analytics/app/core/: config.py
analytics/app/workers/: celery_app.py
docker/analytics/: .dockerignore  Dockerfile
docker/api/: Dockerfile
docker/livekit/: livekit-dev.yaml  livekit-prod.yaml
docker/nginx/: nginx.dev.conf  nginx.prod.conf
docker/realtime/: Dockerfile
docs/architecture/: API_DESIGN.md  ARCHITECTURE.md  DOCKER.md
docs/architecture/adr/: 0001-modular-monolith-architecture.md  0002-hybrid-nodejs-python-stack.md  0003-postgresql-primary-database.md  0004-redis-cache-and-pubsub.md  0005-webrtc-sfu-and-turn.md
realtime/: package.json
realtime/src/: main.ts
